# jtok

./: LICENSE  README.md  install.ps1  install.sh  jtok.py  pyproject.toml
hooks/: jtok-mcp.ps1  jtok-mcp.sh  jtok-read.ps1  jtok-read.sh
tests/: test_jtok.py
